wordpress/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
    spec:
      containers:
      - image: wordpress
        name: demo-wordpress
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
        resources: {}
        volumeMounts:
        - name: wordpress-pv
          mountPath: /opt/app-root/src
        livenessProbe:
          httpGet:
            path: /wp-admin/install.php
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 5
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /wp-admin/install.php
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /wp-admin/install.php
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 5
          successThreshold: 1
      volumes:
      - name: wordpress-pv
        persistentVolumeClaim:
          claimName: wordpress-pv
status: {}
