wordpress/website/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  - port: 8443
    protocol: TCP
    targetPort: 8443
    name: https
  selector:
    app: wordpress
status:
  loadBalancer: {}
