wordpress/website/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
spec:
  port:
    targetPort: 8443
  to:
    kind: Service
    name: wordpress
    weight: null
  tls:
    termination: passthrough
status: {}
